--- a/DoubleClickHeart/heart.css
+++ b/DoubleClickHeart/heart.css
@@ -17,7 +17,7 @@ body {
   position: relative;
   height: 420px;
   width: 320px;
-  background-image: url("/Images/vintageWater.gif");
+  background-image: url("/arquivos/images/vintageWater.gif");
   background-size: cover;
   background-position: center;
   border-radius: 12px;
